--- a/frb_rust/Cargo.toml
+++ b/frb_rust/Cargo.toml
@@ -27,7 +27,7 @@ libc = "0.2"
 parking_lot = { version = "0.12.1" }
 threadpool = { version = "1.8.1" }
 dart-sys = { version = "4.0.2" }
-tokio = { version = "1.34.0", optional = true, features = ["rt-multi-thread"] }
+tokio = { version = "1.34.0", optional = true, features = ["rt-multi-thread", "sync"] }
 
 [target.'cfg(target_family = "wasm")'.dependencies]
 console_error_panic_hook = { version = "0.1.7", optional = true }
