--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -339,7 +339,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dart-lang/setup-dart@v1
         with:
-          sdk: 3.0.0
+          sdk: stable
           architecture: x64
       - uses: dtolnay/rust-toolchain@stable
         with:
@@ -397,7 +397,7 @@ jobs:
 
       - uses: dart-lang/setup-dart@v1
         with:
-          sdk: 3.0.0
+          sdk: stable
           architecture: x64
       - uses: extractions/setup-just@v1
         env:
@@ -428,7 +428,7 @@ jobs:
 
       - uses: dart-lang/setup-dart@v1
         with:
-          sdk: 3.0.0
+          sdk: stable
           architecture: x64
       - uses: extractions/setup-just@v1
         env:
@@ -458,7 +458,7 @@ jobs:
           components: rustfmt, clippy
       - uses: dart-lang/setup-dart@v1
         with:
-          sdk: 3.0.0
+          sdk: stable
           architecture: x64
       - uses: extractions/setup-just@v1
         env:
@@ -475,7 +475,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dart-lang/setup-dart@v1
         with:
-          sdk: 3.0.0
+          sdk: stable
           architecture: x64
       - uses: subosito/flutter-action@v2
         with:
