--- a/frb_example/dart_minimal/pubspec.yaml
+++ b/frb_example/dart_minimal/pubspec.yaml
@@ -10,7 +10,9 @@ dependencies:
     path: ../../frb_dart
   flutter_rust_bridge_utils:
     path: ../../frb_utils
+  freezed_annotation: ^2.2.0
 dev_dependencies:
   test: ^1.21.4
+  freezed: ^2.1.0+1
   build_runner: ^2.4.4
   ffigen: ^8.0.0
