--- a/frb_example/pure_dart/pubspec.yaml
+++ b/frb_example/pure_dart/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   test: ^1.21.4
   uuid: ^4.1.0
   collection: ^1.16.0
+  protobuf: ^3.1.0 # `protobuf` is only used for comparison
 dev_dependencies:
   build_runner: ^2.4.4
   freezed: ^2.1.0+1
