--- a/frb_example/pure_dart/benchmark/protobuf/justfile
+++ b/frb_example/pure_dart/benchmark/protobuf/justfile
@@ -3,7 +3,7 @@ generate:
     just generate-dart
 
 generate-rust:
-    protoc --rust_out=../../rust/src/auxiliary/protobuf_for_benchmark protobuf_for_benchmark.proto
+    protoc --rust_out=../../rust/src/auxiliary protobuf_for_benchmark.proto
 
 generate-dart:
     protoc --dart_out=../src/protobuf_for_benchmark protobuf_for_benchmark.proto
