--- a/frb_example/pure_dart/rust/Cargo.toml
+++ b/frb_example/pure_dart/rust/Cargo.toml
@@ -19,3 +19,6 @@ byteorder = "1.5.0"
 lazy_static = "1.4.0"
 tempfile = "3.8.1"
 futures = "0.3.29"
+serde = "1.0" # Only used for comparison test
+serde_json = "1.0" # Only used for comparison test
+protobuf = "3.3.0" # Only used for comparison test
