--- a/frb_example/pure_dart/rust/Cargo.toml
+++ b/frb_example/pure_dart/rust/Cargo.toml
@@ -21,4 +21,4 @@ tempfile = "3.8.1"
 futures = "0.3.29"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0" # Only used for comparison test
-protobuf = "3.3.0" # Only used for comparison test
+protobuf = "=2.28.0" # Only used for comparison test
