--- a/frb_codegen/Cargo.toml
+++ b/frb_codegen/Cargo.toml
@@ -49,6 +49,7 @@ derivative = "2.2.0"
 paste = "1.0.14"
 proc-macro2 = { version = "1.0.66", features = ["span-locations"]}
 include_dir = "0.7.3"
+indicatif = "0.17.7"
 
 [dev-dependencies]
 semver = "1.0.12"
