feat: add tokio

--- a/frb_codegen/Cargo.toml
+++ b/frb_codegen/Cargo.toml
@@ -51,6 +51,7 @@ proc-macro2 = { version = "1.0.66", features = ["span-locations"]}
 include_dir = "0.7.3"
 indicatif = "0.17.7"
 indicatif-log-bridge = "0.2.2"
+tokio = { version = "1", features = ["full"] }
 
 [dev-dependencies]
 semver = "1.0.12"
