--- a/bug/pubspec.yaml
+++ b/bug/pubspec.yaml
@@ -13,3 +13,24 @@ dependencies:
 dev_dependencies:
   lints: ^2.1.0
   test: ^1.24.0
+  ffigen: ^8.0.0 # TODO use 10.x
+
+ffigen:
+  # Run with `flutter pub run ffigen --config ffigen.yaml`.
+  name: UseRustBindings
+  description: |
+    Bindings for `src/use_rust.h`.
+    Regenerate bindings with `flutter pub run ffigen --config ffigen.yaml`.
+  output: "lib/src/use_rust_bindings_generated.dart"
+  headers:
+    entry-points:
+      - "src/use_rust.h"
+    include-directives:
+      - "src/use_rust.h"
+  preamble: |
+    // Copyright (c) 2023, the Dart project authors.  Please see the AUTHORS file
+    // for details. All rights reserved. Use of this source code is governed by a
+    // BSD-style license that can be found in the LICENSE file.
+  comments:
+    style: any
+    length: full
