chore: use scaffold

--- a/frb_example/gallery/android/app/src/main/AndroidManifest.xml
+++ b/frb_example/gallery/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="flutter_via_create"
+        android:label="frb_example_gallery"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
