--- a/frb_example/gallery/rust_builder/cargokit/build_tool/pubspec.yaml
+++ b/frb_example/gallery/rust_builder/cargokit/build_tool/pubspec.yaml
@@ -1,6 +1,5 @@
-# This is copied from cargokit, TODO
-# TODO explain more
-# 
+# This is copied from Cargokit (which is the official way to use it currently)
+# Details: https://fzyzcjy.github.io/flutter_rust_bridge/manual/integrate/builtin
 
 name: build_tool
 description: Cargokit build_tool. Facilitates the build of Rust crate during Flutter application build.
