--- a/frb_example/gallery/macos/Runner/Configs/AppInfo.xcconfig
+++ b/frb_example/gallery/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = flutter_via_create
+PRODUCT_NAME = frb_example_gallery
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.flutterViaCreate
+PRODUCT_BUNDLE_IDENTIFIER = com.example.frbExampleGallery
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2023 com.example. All rights reserved.
