--- a/frb_example/gallery/windows/CMakeLists.txt
+++ b/frb_example/gallery/windows/CMakeLists.txt
@@ -1,10 +1,10 @@
 # Project-level configuration.
 cmake_minimum_required(VERSION 3.14)
-project(flutter_via_create LANGUAGES CXX)
+project(frb_example_gallery LANGUAGES CXX)
 
 # The name of the executable created for the application. Change this to change
 # the on-disk name of your application.
-set(BINARY_NAME "flutter_via_create")
+set(BINARY_NAME "frb_example_gallery")
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
 # versions of CMake.
