--- a/frb_example/gallery/rust/Cargo.toml
+++ b/frb_example/gallery/rust/Cargo.toml
@@ -14,4 +14,4 @@ image = "0.24.3"
 crossbeam = "0.8"
 # Polars on WASM https://www.reddit.com/r/rust/comments/yb58hk/how_to_use_polars_with_wasm/
 polars-core = "0.35.4"
-polars-lazy = "0.35.4"
+polars-lazy = { version = "0.35.4" , features = ["csv"]}
