--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -68,7 +68,7 @@ jobs:
   # ----------------------------------- codegen -----------------------------------
 
   generate_run_frb_codegen_command_generate:
-    name: 'Generate :: Run FRB Codegen :: Command Generate'
+    name: 'Generate :: FRB Codegen :: Command Generate'
     runs-on: ${{ matrix.image }}
 
     strategy:
@@ -110,7 +110,7 @@ jobs:
       - run: ./frb_internal generate-run-frb-codegen-command-generate --set-exit-if-changed --package ${{ matrix.package }}
 
   generate_run_frb_codegen_command_integrate:
-    name: 'Generate :: Run FRB Codegen :: Command Integrate'
+    name: 'Generate :: FRB Codegen :: Command Integrate'
     runs-on: ${{ matrix.image }}
     env:
       RUST_LOG: debug
