--- a/frb_rust/Cargo.toml
+++ b/frb_rust/Cargo.toml
@@ -27,7 +27,8 @@ allo-isolate = { workspace = true, features = ["anyhow", "backtrace", "zero-copy
 libc = "0.2"
 parking_lot = { version = "0.12.1" }
 threadpool = { version = "1.8.1" }
-dart-sys = { version = "4.0.2" }
+# We want the license and the Dart_CurrentIsolate, which is not published yet
+dart-sys = { git = "https://github.com/dart-sys/dart-sys.git", rev = "7b97972" }
 tokio = { version = "1.34.0", optional = true, features = ["rt-multi-thread"] }
 
 [target.'cfg(target_family = "wasm")'.dependencies]
