feat: temp avoid "^"

--- a/frb_example/flutter_via_create/pubspec.yaml
+++ b/frb_example/flutter_via_create/pubspec.yaml
@@ -50,7 +50,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  ffigen: ^8.0.0
+  ffigen: 8.0.2
   integration_test:
     sdk: flutter
 
