--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -248,7 +248,14 @@ jobs:
           architecture: x64
 
       # execute
-      - run: ./frb_internal test-rust
+      - run: ./frb_internal test-rust --coverage
+
+      # report
+      - uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        with:
+          verbose: true
 
   test_dart_native:
     name: 'Test :: Dart :: Native'
