--- a/website/package.json
+++ b/website/package.json
@@ -22,6 +22,7 @@
         "autoprefixer": "^10.4.12",
         "clsx": "^1.2.1",
         "glob": "^10.3.10",
+        "html2canvas": "^1.4.1",
         "plotly.js": "^2.27.1",
         "postcss": "^8.4.18",
         "prism-react-renderer": "^1.3.5",
