fix: setup flutter

--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -10,7 +10,7 @@ on:
       - "frb_example/gallery/**"
 
 env:
-  FRB_MAIN_DART_VERSION: 3.2.0
+  FRB_MAIN_FLUTTER_VERSION: 3.16.0
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -23,10 +23,10 @@ jobs:
     steps:
       # setup
       - uses: actions/checkout@v4
-      - uses: dart-lang/setup-dart@v1
+      - uses: subosito/flutter-action@v2
         with:
-          sdk: ${{ env.FRB_MAIN_DART_VERSION }}
-          architecture: x64
+          cache: true
+          flutter-version: ${{ env.FRB_MAIN_FLUTTER_VERSION }}
       - uses: actions/setup-node@v3
         with:
           node-version: 18
