--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -141,7 +141,13 @@ jobs:
           architecture: x64
 
       # execute
-      - run: ./frb_internal generate-run-frb-codegen-command-generate --set-exit-if-changed --package ${{ matrix.package }}
+      - run: ./frb_internal generate-run-frb-codegen-command-generate --set-exit-if-changed --package ${{ matrix.package }} --coverage
+
+      # report
+      - uses: actions/upload-artifact@v3
+        with:
+          name: rust_lcov.info
+          path: ${{ matrix.package }}/coverage/rust_lcov.info
 
   generate_run_frb_codegen_command_integrate:
     name: 'Generate :: FRB Codegen :: Command Integrate'
@@ -179,7 +185,13 @@ jobs:
           architecture: x64
 
       # execute
-      - run: ./frb_internal generate-run-frb-codegen-command-integrate --set-exit-if-changed --package ${{ matrix.package }}
+      - run: ./frb_internal generate-run-frb-codegen-command-integrate --set-exit-if-changed --package ${{ matrix.package }} --coverage
+
+      # report
+      - uses: actions/upload-artifact@v3
+        with:
+          name: rust_lcov.info
+          path: ${{ matrix.package }}/coverage/rust_lcov.info
 
   generate_internal:
     name: 'Generate :: Internal'
@@ -206,7 +218,13 @@ jobs:
           architecture: x64
 
       # execute
-      - run: ./frb_internal generate-internal --set-exit-if-changed
+      - run: ./frb_internal generate-internal --set-exit-if-changed --coverage
+
+      # report
+      - uses: actions/upload-artifact@v3
+        with:
+          name: rust_lcov.info
+          path: frb_internal/coverage/rust_lcov.info
 
   # ----------------------------------- bench -----------------------------------
 
@@ -651,7 +669,13 @@ jobs:
           lsof -i :4444
 
       # execute
-      - run: ./frb_internal test-flutter-web --package ${{ matrix.package }}
+      - run: ./frb_internal test-flutter-web --package ${{ matrix.package }} --coverage
+
+      # report
+      - uses: actions/upload-artifact@v3
+        with:
+          name: rust_lcov.info
+          path: ${{ matrix.package }}/coverage/rust_lcov.info
 
   # ----------------------------------- misc -----------------------------------
 
