--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -515,8 +515,9 @@ jobs:
           flutter-version: ${{ env.FRB_MAIN_FLUTTER_VERSION }}
           architecture: x64
       # Otherwise it fails and Flutter doctor say "You need Java 11 or higher to build your app with this version of Gradle."
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v2
         with:
+          distribution: 'zulu'
           java-version: "11.x"
       - name: AVD cache
         uses: actions/cache@v3
