--- a/frb_example/flutter_via_integrate/rust/Cargo.toml
+++ b/frb_example/flutter_via_integrate/rust/Cargo.toml
@@ -8,3 +8,4 @@ crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
 flutter_rust_bridge = { path = "../../../frb_rust" }
+wasm-bindgen = "0.2.88" # TODO temp experiment
