--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -147,7 +147,7 @@ jobs:
       # report
       - uses: actions/upload-artifact@v3
         with:
-          name: rust_lcov.info
+          name: ${{ github.job }}--${{ matrix.image }}--${{ matrix.package TODO }}--rust_lcov.info
           path: frb_codegen/lcov.info
 
   generate_run_frb_codegen_command_integrate:
