--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -147,7 +147,7 @@ jobs:
       # report
       - uses: actions/upload-artifact@v4
         with:
-          name: ${{ github.job }}--${{ matrix.image }}--${{ matrix.package TODO }}--rust_lcov.info
+          name: ${{ github.job }}--${{ matrix.image }}--${{ matrix.package TODO }}--coverage
           path: frb_codegen/lcov.info
 
   generate_run_frb_codegen_command_integrate:
@@ -192,7 +192,7 @@ jobs:
       # report
       - uses: actions/upload-artifact@v4
         with:
-          name: ${{ github.job }}--${{ matrix.image }}--${{ matrix.package TODO }}--rust_lcov.info
+          name: ${{ github.job }}--${{ matrix.image }}--${{ matrix.package TODO }}--coverage
           path: frb_codegen/lcov.info
 
   generate_internal:
@@ -226,7 +226,7 @@ jobs:
       # report
       - uses: actions/upload-artifact@v4
         with:
-          name: ${{ github.job }}--rust_lcov.info
+          name: ${{ github.job }}--coverage
           path: frb_codegen/lcov.info
 
   # ----------------------------------- bench -----------------------------------
@@ -318,7 +318,7 @@ jobs:
       # report
       - uses: actions/upload-artifact@v4
         with:
-          name: ${{ github.job }}--${{ matrix.info.image }}--${{ matrix.info.version }}--lcov.info
+          name: ${{ github.job }}--${{ matrix.info.image }}--${{ matrix.info.version }}--coverage
           path: frb_codegen/lcov.info
 
   test_dart_native:
@@ -673,11 +673,11 @@ jobs:
       # report
       - uses: actions/upload-artifact@v4
         with:
-          name: ${{ github.job }}--${{ matrix.package TODO }}--coverage
+          name: ${{ github.job }}--${{ matrix.package TODO }}--coverage-primary
           path: ${{ matrix.package }}/coverage/
       - uses: actions/upload-artifact@v4
         with:
-          name: ${{ github.job }}--${{ matrix.package TODO }}--rust_lcov.info
+          name: ${{ github.job }}--${{ matrix.package TODO }}--coverage-frb_codegen
           path: frb_codegen/lcov.info
 
   # ----------------------------------- misc -----------------------------------
