--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -147,7 +147,7 @@ jobs:
       # report
       - uses: actions/upload-artifact@v4
         with:
-          name: ${{ github.job }}--${{ matrix.image }}--${{ matrix.package TODO }}--coverage
+          name: ${{ github.job }}--${{ matrix.image }}--${{ matrix.package }}--coverage
           path: frb_codegen/lcov.info
 
   generate_run_frb_codegen_command_integrate:
@@ -192,7 +192,7 @@ jobs:
       # report
       - uses: actions/upload-artifact@v4
         with:
-          name: ${{ github.job }}--${{ matrix.image }}--${{ matrix.package TODO }}--coverage
+          name: ${{ github.job }}--${{ matrix.image }}--${{ matrix.package }}--coverage
           path: frb_codegen/lcov.info
 
   generate_internal:
@@ -368,7 +368,7 @@ jobs:
       # report
       - uses: actions/upload-artifact@v4
         with:
-          name: ${{ github.job }}--${{ matrix.image }}--${{ matrix.package TODO }}--coverage
+          name: ${{ github.job }}--${{ matrix.image }}--${{ matrix.package }}--coverage
           path: ${{ matrix.package }}/coverage/
 
   test_dart_web:
@@ -673,11 +673,11 @@ jobs:
       # report
       - uses: actions/upload-artifact@v4
         with:
-          name: ${{ github.job }}--${{ matrix.package TODO }}--coverage-primary
+          name: ${{ github.job }}--${{ matrix.package }}--coverage-primary
           path: ${{ matrix.package }}/coverage/
       - uses: actions/upload-artifact@v4
         with:
-          name: ${{ github.job }}--${{ matrix.package TODO }}--coverage-frb_codegen
+          name: ${{ github.job }}--${{ matrix.package }}--coverage-frb_codegen
           path: frb_codegen/lcov.info
 
   # ----------------------------------- misc -----------------------------------
